welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:4: error: not found: value T
	if ( T(pos) == value ) { pos; }
             ^indexOfValue:3: error: type mismatch;
 found   : Unit
 required: Int
   for (i <- 0 to nums.length) {
          ^