welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.code
def indexOfValue(nums:Array[Int] ,value:Int): Int = {
   var pos = 0;
   for (i <- 0 to nums.length) {
	if ( T(pos) == value ) { pos; }
	else { -1; pos = pos + 1; }
     }
}
